--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <textarea id="content" name="textarea" rows="10" cols="50" ></textarea>
   <div class="poster"></div>
   <script type="text/javascript" src="./jquery-3.2.1.min.js"></script>
-  <script type="text/javascript" src="./two.min.js"></script>
+  <script type="text/javascript" src="./letters.js"></script>
   <script type="text/javascript" src="./postletterpress.js"></script>
 </body>
 </html>
