--- a/index.html
+++ b/index.html
@@ -4,12 +4,15 @@
 <head>
 <meta charset="UTF-8">
   <title></title>
+  <link rel="stylesheet" type="text/css" href="./style/screen.css">
 </head>
 <body>
-  <textarea id="content" name="textarea" rows="10" cols="50" ></textarea>
   <div class="poster"></div>
-  <script type="text/javascript" src="./jquery-3.2.1.min.js"></script>
-  <script type="text/javascript" src="./letters.js"></script>
-  <script type="text/javascript" src="./postletterpress.js"></script>
+  <textarea class="no-print" id="content" name="textarea" rows="4" cols="10" >welcome
+type
+something</textarea>
+  <script type="text/javascript" src="./js/jquery-3.2.1.min.js"></script>
+  <script type="text/javascript" src="./js/letters.js"></script>
+  <script type="text/javascript" src="./js/postletterpress.js"></script>
 </body>
 </html>
